HeapAllocator parametrization tuned up, Memory Consuption sections added to README-s